# protean-mcp

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PLAN.md  README.md  SECURITY.md  agent_manifest.json  glama.json  package.json  pyproject.toml  server.json  server.py  server_forge.py  smithery.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_server.md
.github/workflows/: publish.yml  release.yml  test.yml
chameleon_mcp/: app.py  constants.py  credentials.py  morph.py  official_registry.py  probe.py  registry.py  session.py  tools.py  transport.py  utils.py
docs/: agent-patterns.md  architecture.excalidraw  benchmarks.md  compatibility.md  hardware.md  new-session-decouple-prompt.md  quickstart.md  review-request.md  tools.md  transports.md
examples/: benchmark.py  demo_wow.md  linkedin_post.md  test_session.md
kitsune_mcp/: constants.py  credentials.py  official_registry.py  registry.py  session.py  shapeshift.py  tools.py  transport.py  utils.py
tests/: conftest.py  test_morph.py  test_notifications.py  test_persistent.py  test_probe.py  test_registry.py  test_shapeshift.py  test_tools.py  test_transports.py  test_ux_changes.py
