[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kitsune-mcp"
version = "0.8.3"
description = "The shape-shifting MCP hub — shapeshift() into any MCP server at runtime. 7 registries. No restart."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Kitsune MCP Contributors" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "claude",
    "anthropic",
    "ai-agents",
    "llm-tools",
    "fastmcp",
    "mcp-server",
    "mcp-hub",
    "mcp-registry",
    "mcp-router",
    "mcp-proxy",
    "smithery",
    "tool-use",
    "ai-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=0.1.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "respx>=0.21.0",
]

[project.scripts]
kitsune-mcp = "server:mcp.run"
kitsune-forge = "server_forge:mcp.run"
protean-mcp = "server:mcp.run"       # deprecated alias, remove in v0.9
protean-forge = "server_forge:mcp.run"  # deprecated alias, remove in v0.9
chameleon-mcp = "server:mcp.run"     # deprecated alias, remove in v0.9
chameleon-forge = "server_forge:mcp.run"  # deprecated alias, remove in v0.9

[project.urls]
Homepage = "https://github.com/kaiser-data/kitsune-mcp"
Repository = "https://github.com/kaiser-data/kitsune-mcp"
Issues = "https://github.com/kaiser-data/kitsune-mcp/issues"
Documentation = "https://github.com/kaiser-data/kitsune-mcp/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["server.py", "server_forge.py", "kitsune_mcp/*.py"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008", "SIM117"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
